Fixed padding issue on mobile screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -79,6 +79,7 @@ body {
     background-color: #fff;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-bottom: 100px; /* Spacing between treatment cards */
 }
 
 .treatment-wrapper:hover {
@@ -117,8 +118,7 @@ body {
 
 /* Stick footer to bottom of the page */
 .footer-wrapper {
-    position: absolute;
-    bottom: 0;
+    bottom: 100%;
 }
 
 /* -------------------------------- Media Queries */
@@ -140,4 +140,15 @@ body {
         z-index: 1030;
     }
 
+}
+
+/* Add padding to the top when navbar is collapsed on mobile devices */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
 }
